Fix form action button spacing

--- a/app/assets/stylesheets/partials/_forms.scss
+++ b/app/assets/stylesheets/partials/_forms.scss
@@ -263,11 +263,17 @@ select {
   }
 
   input[type="submit"] {
+    margin-top: 1em;
     margin-bottom: 1em;
 
     @media (max-width: $breakpoint-mobile-large) {
       width: 100%;
     }
+  }
+
+  a {
+    margin-top: 1em;
+    margin-bottom: 1em;
   }
 }
 
